src/style.css
/* ... */
/* --------------------MY NEW STUFF-----------------------------------------------------------*/
#Content{
    width: 100%;
}
hr{
    width:96%;
}

#Items{
    list-style-type: none;
    display: block;
    float: left;
    padding-right: 50px;
    width: 55%;
    padding-left: 4%;
}
#Items h3{
    padding: 0px;
    margin:0px;
    font-weight: normal;
}
#Items h4{
    padding: 0px;
    margin:0px;
    font-weight: normal;
}
#Items a{
    text-decoration: none;
    font-weight: normal;
    font-family: sans-serif;
    font-size: 13px;
    float: right;
    color:black;
}

#Items hr{
    width: 105%;
    margin-left: -1%;
}

#Items img{
    width: 16%;
    display: block;
    float: left;
    height: auto;
    padding-left: 1%;
    padding-right: 30px;
}
#OrderSummary{
    list-style-type: none;
    display: block;
    float: right;
    width: 27%;
    text-align: center;
    padding-bottom: 20px;
    border: 1px solid silver;
    border-spacing: 15px;
    margin-left: 30px;
    margin-right: 30px;
    margin-bottom: 30px;
}


#Checkout {
    text-decoration: none;
    color: white;
    font-family: 'Roboto';
    padding-left: 55px;
    padding-right: 55px;
    padding-top: 3px;
    padding-bottom: 3px;
    background-color: black;
    text-align: center;

}
a{
    text-decoration:  none;
}

#SameLine{
    width: 35%;
    display: block;
    float:left;
}

#Price{
    width: 60%;
    font-size: 25px;
}

#subSummary{
    width: 50%;
    float: left;
    font-weight: normal;
    font-size: 19px;
}



#Total{
    width: 50%;
    float: left;
    font-size: 22px;
}

/*Claudia's additions for homepage*/
.sidenav{
    height: 100%;
    width: 20%;
    border-style: solid;
    border-width: 3px;
    border-color: #cfcfcf;
    position: relative;
    z-index: 0; /* Stay on top */
    top: 0; /* Stay at the top */
    left: 0;
    background-color: #ebebeb; /* Black */
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top:3px;

  }
.sidenav a {
  padding: 6px 8px 6px 16px;
  font-size: 30px;
  color: #090a0a ;
  text-align: left;
  display: block;
  font-family: 'Playfair Display';
  font-size: 35px;
  line-height: 1.3em;
}
.sidenav a:hover {
  color: #717d6d;
}

.mainColumn{
    height: 100%;
    width: 75%;
    display: flex;
    border-color: white ;
    border-width: 3px;
    margin-left: 40px;
}

.flex-container{
    display: flex;
    flex-direction: row;
    margin: 0px;
}

.grid-container{
    display: grid;
    grid-row-gap: 20px;
    /* grid-column-gap: 10px; */
    padding: 1px;
    }
/*this may affect all links*/
a{
    text-decoration: none;
}
img{
    padding-left: 10px;
    padding-bottom: 10x;
    margin: 15px;
}

.inStockContainers{
    height: 230px;
    width: 200px;
    border: #DFDFDF;
    border-style: solid;
    margin: 35px;
    position: relative;
    text-align: center;



}

#typePrice{
    color: grey;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;

}

#instock{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 27px;
    font-weight: bold;
    color: black;
    line-height: 1.6em;
    text-align: left;

  }
  #inStockSmall{
      font-family: Arial, Helvetica, sans-serif;
      font-size: 15px;
      font-weight: bold;
      color: black;
      text-align: left;

}
#brandName{
    /*brand name in side nav*/
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: 18px;
    color: black;
    padding-left: 50 px;


  }
  #subfont{
      /*the tiny font under the brand name(the drop name)*/
      font-family: Arial, Helvetica, sans-serif;
      font-size: 12px;
      font-weight: bold;
      color: black;
      padding-left: 2px;
  }
  #headline{
      /*the headline on the front page8*/
      font-family: Arial, Helvetica, sans-serif;
      font-weight: 300;
      font-size: 45px;
      color: black;

  }
  #subheadline{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
    color: grey;
    /*padding-left: 50 px;*/

  }
  #credit{
      font-family: Arial, Helvetica, sans-serif;
      font-size: 10px;
      text-align: right;

  }
  #secondh4{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 23px;
    color: black;
    line-height: 1.6em;
    text-align: center;
    padding-top: 1px;
    font-weight: bold;
  }
  .pictureContainers{
    border: #DFDFDF;
    margin: 20px;
    position: relative;
    text-align: center;



}
 

